about image fix on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,6 +51,8 @@ color:#fff;position:absolute;top:50%;left:50%;margin:0 auto;-webkit-transform:tr
   .project-left .contents {margin-top: 0;  margin-left: 5%; margin-right: 5%;}
   .project-right .contents {margin-top: 0; margin-left: 5%; margin-right: 5%;}
   .user-details h1 {margin: 0;}
+
+  .about-text img {width: 80%; margin: auto;}
 }
 
 @media (min-width: 800px) {
